# simple-switch-browser

./: .gitmodules  CMakeLists.txt  README.md  VersionConfig.h.in
cmake/: VersionConfig.h.in  borealis.cmake  buildBorealisExample.cmake  buildBorealisLib.cmake  dependencies.cmake  devkita64-libnx.cmake  nx-utils.cmake
include/: BrowserApp.h
src/: BrowserApp.cpp  CMakeLists.txt  SimpleSwitchBrowser.cpp  main.cpp
src/AppFrontEnd/include/: BrowserApp.h
src/AppFrontEnd/src/: BrowserApp.cpp
src/Frames/include/: BrowserFrame.h
src/Frames/src/: BrowserFrame.cpp
